force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntranceAgeEligibilityFinal__c.field-meta.xml
<CustomField>
    <fullName>EntranceAgeEligibilityFinal__c</fullName>
    <description>This is the final value for the entrance age eligibility.</description>
    <formula>IF(NOT(ISBLANK(TEXT(EntranceAgeEligibilityOverride__c))), TEXT(EntranceAgeEligibilityOverride__c),
IF(ISPICKVAL(Enrollment_Type__c,&apos;Returning Student&apos;),&apos;&apos;,
IF(TEXT(EntranceAgeEligibilitySystem__c)=&apos;Eligible&apos;, &apos;Eligible&apos;,
IF(TEXT(EntranceAgeEligibilitySystem__c)=&apos;Too young&apos; || TEXT(EntranceAgeEligibilitySystem__c)=&apos;Too old&apos;, &apos;Ineligible&apos;,
IF(TEXT(EntranceAgeEligibilitySystem__c)=&apos;Too young - other options&apos; || TEXT(EntranceAgeEligibilitySystem__c)=&apos;Too old - other options&apos;, &apos;Ineligible - Other options&apos;,
IF(TEXT(EntranceAgeEligibilitySystem__c)=&apos;Pending - More Information Needed&apos;, &apos;Pending - More Information Needed&apos;,
&apos;Pending Review&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entrance Age Eligibility (Final)</label>
    <type>Text</type>
</CustomField>