force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntranceAgeEligibilityOverride__c.field-meta.xml
<CustomField>
    <fullName>EntranceAgeEligibilityOverride__c</fullName>
    <description>Entrance Age Eligibility Override</description>
    <label>Entrance Age Eligibility (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible- Other options</fullName>
                <isActive>false</isActive>
                <label>Ineligible- Other options</label>
            </value>
            <value>
                <fullName>Released</fullName>
                <isActive>false</isActive>
                <label>Released</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>