force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntranceAgeEligibilitySystem__c.field-meta.xml
<CustomField>
    <fullName>EntranceAgeEligibilitySystem__c</fullName>
    <description>This field will be set from code and not set by a user. If a user wants to override this value they will update the Entrance Age Eligibility Override. There will be a formula that will mash these together to give us the final Value.</description>
    <inlineHelpText>This field will be set from code and not set by a user.</inlineHelpText>
    <label>Entrance Age Eligibility (System)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>NOT ELIGIBLE-No Birthdate</fullName>
            </value>
            <value>
                <fullName>Too young</fullName>
            </value>
            <value>
                <fullName>Too old</fullName>
            </value>
            <value>
                <fullName>Too young - other options</fullName>
            </value>
            <value>
                <fullName>Possibly too old</fullName>
            </value>
            <value>
                <fullName>Too old - other options</fullName>
            </value>
            <value>
                <fullName>Pending - More Information Needed</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
                <isActive>false</isActive>
                <label>Ineligible</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
                <isActive>false</isActive>
                <label>Pending Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>