force-app/main/default/objects/hed__Program_Enrollment__c/fields/Evaluate_Placement_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Placement_Bucket__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Evaluate Placement Bucket</label>
    <type>Checkbox</type>
</CustomField>