force-app/main/default/objects/hed__Program_Enrollment__c/fields/EvaluatePlacementExclude__c.field-meta.xml
<CustomField>
    <fullName>EvaluatePlacementExclude__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The student needs to have their exclusion from AutoPlacement recalculated.</description>
    <label>Evaluate AutoPlacement Exclusion</label>
    <type>Checkbox</type>
</CustomField>