force-app/main/default/objects/hed__Program_Enrollment__c/fields/EvaluatePlacementScore__c.field-meta.xml
<CustomField>
    <fullName>EvaluatePlacementScore__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The student needs to have their AutoPlacement Score recalculated</description>
    <label>Evaluate AutoPlacement Score</label>
    <type>Checkbox</type>
</CustomField>