force-app/main/default/objects/hed__Program_Enrollment__c/fields/Ever_In_Public_School__c.field-meta.xml
<CustomField>
    <fullName>Ever_In_Public_School__c</fullName>
    <description>Has this student ever been enrolled in a &lt;em&gt;public&lt;/em&gt; school in the United States</description>
    <label>Ever In Public School</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>