force-app/main/default/objects/hed__Program_Enrollment__c/fields/EverInHeadStart__c.field-meta.xml
<CustomField>
    <fullName>EverInHeadStart__c</fullName>
    <description>Ever enrolled in a Head Start or early childhood education program:</description>
    <inlineHelpText>Ever enrolled in a Head Start or early childhood education program:</inlineHelpText>
    <label>Ever In Head Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>