force-app/main/default/objects/hed__Program_Enrollment__c/fields/Extended_Program_Requests__c.field-meta.xml
<CustomField>
    <fullName>Extended_Program_Requests__c</fullName>
    <description>Additional Approved Extended Courses</description>
    <label>Extended Program Requests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Social Studies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>