force-app/main/default/objects/hed__Program_Enrollment__c/fields/FAFCompleteOverride__c.field-meta.xml
<CustomField>
    <fullName>FAFCompleteOverride__c</fullName>
    <label>FAF Complete Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>