force-app/main/default/objects/hed__Program_Enrollment__c/fields/Family_Enrollment_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Family_Enrollment_Counselor__c</fullName>
    <description>Allows a user to see on the PE who the FEC is for this family.</description>
    <formula>hed__Contact__r.Account.Family_Enrollment_Counselor__r.FirstName + &apos; &apos; + hed__Contact__r.Account.Family_Enrollment_Counselor__r.LastName</formula>
    <label>Family Enrollment Counselor</label>
    <type>Text</type>
</CustomField>