force-app/main/default/objects/hed__Program_Enrollment__c/fields/Family_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Family_Relationship_Manager__c</fullName>
    <description>Family Relationship Manager</description>
    <label>Family Relationship Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ashley Schneider</fullName>
            </value>
            <value>
                <fullName>Charlene Chan</fullName>
            </value>
            <value>
                <fullName>Cheltese Shelton-Woodford</fullName>
            </value>
            <value>
                <fullName>Ciarra Roulhac</fullName>
            </value>
            <value>
                <fullName>Eileen Milligan</fullName>
            </value>
            <value>
                <fullName>Joshua Adinlewa</fullName>
            </value>
            <value>
                <fullName>Kristin Kiel</fullName>
            </value>
            <value>
                <fullName>Mikia Starkey</fullName>
            </value>
            <value>
                <fullName>Reassign</fullName>
            </value>
            <value>
                <fullName>Sandy Stein</fullName>
            </value>
            <value>
                <fullName>Spencer Pilgrim</fullName>
            </value>
            <value>
                <fullName>Steven Smith</fullName>
            </value>
            <value>
                <fullName>Theresa Deloatch</fullName>
            </value>
            <value>
                <fullName>Tiffany Simmons</fullName>
            </value>
            <value>
                <fullName>Tommy Lui</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>