force-app/main/default/objects/hed__Program_Enrollment__c/fields/FatherEmploymentAddress__c.field-meta.xml
<CustomField>
    <fullName>FatherEmploymentAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FatherEmploymentAddress</label>
    <type>TextArea</type>
</CustomField>