force-app/main/default/objects/hed__Program_Enrollment__c/fields/FatherEmploymentInfo__c.field-meta.xml
<CustomField>
    <fullName>FatherEmploymentInfo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FatherEmploymentInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>