force-app/main/default/objects/hed__Program_Enrollment__c/fields/FatherEmploymentPhone__c.field-meta.xml
<CustomField>
    <fullName>FatherEmploymentPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FatherEmploymentPhone</label>
    <type>Phone</type>
</CustomField>