force-app/main/default/objects/hed__Program_Enrollment__c/fields/FCC__c.field-meta.xml
<CustomField>
    <fullName>FCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household&apos;s FCC Name</description>
    <label>FCC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Enrollments5</relationshipName>
    <type>Lookup</type>
</CustomField>