force-app/main/default/objects/hed__Program_Enrollment__c/fields/FCC_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>FCC_Call_Back__c</fullName>
    <description>FCC Call Back</description>
    <label>FCC Call Back</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempted</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>