force-app/main/default/objects/hed__Program_Enrollment__c/fields/FCC_Escalation_Status_2__c.field-meta.xml
<CustomField>
    <fullName>FCC_Escalation_Status_2__c</fullName>
    <description>FCC Escalation Status 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FCC Escalation Status 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>