force-app/main/default/objects/hed__Program_Enrollment__c/fields/FCC_Future_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>FCC_Future_Contact_Date__c</fullName>
    <description>FCC Future Contact Date (to be used by FCC only)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FCC Future Contact Date</label>
    <type>Date</type>
</CustomField>