force-app/main/default/objects/hed__Program_Enrollment__c/fields/FCC_Status__c.field-meta.xml
<CustomField>
    <fullName>FCC_Status__c</fullName>
    <description>FCC Status</description>
    <label>FCC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCC</fullName>
            </value>
            <value>
                <fullName>Non-FCC</fullName>
            </value>
            <value>
                <fullName>Partial FCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>