force-app/main/default/objects/hed__Program_Enrollment__c/fields/FCCCallBackTimestamp__c.field-meta.xml
<CustomField>
    <fullName>FCCCallBackTimestamp__c</fullName>
    <description>Date and Time FCC Call Back was Requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FCC Call Back Timestamp</label>
    <type>DateTime</type>
</CustomField>