force-app/main/default/objects/hed__Program_Enrollment__c/fields/Final_Math_Override__c.field-meta.xml
<CustomField>
    <fullName>Final_Math_Override__c</fullName>
    <description>Final Math Override</description>
    <label>Final Math Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>