force-app/main/default/objects/hed__Program_Enrollment__c/fields/FinalGradeOverride__c.field-meta.xml
<CustomField>
    <fullName>FinalGradeOverride__c</fullName>
    <description>Final Grade Override</description>
    <label>Final Grade Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>