force-app/main/default/objects/hed__Program_Enrollment__c/fields/Finite_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Finite_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finite Enrollment</label>
    <type>Checkbox</type>
</CustomField>