force-app/main/default/objects/hed__Program_Enrollment__c/fields/First_Month_and_Year_of_HS__c.field-meta.xml
<CustomField>
    <fullName>First_Month_and_Year_of_HS__c</fullName>
    <description>What was the month and year your student first enrolled in high school (For example: August, 2016)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Month and Year of HS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>