force-app/main/default/objects/hed__Program_Enrollment__c/fields/First_Yr_Complete_10_Coursework__c.field-meta.xml
<CustomField>
    <fullName>First_Yr_Complete_10_Coursework__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the student&apos;s first year in tenth grade</description>
    <label>First Yr Complete 10 Coursework</label>
    <type>Checkbox</type>
</CustomField>