force-app/main/default/objects/hed__Program_Enrollment__c/fields/First_Yr_Complete_11_Coursework__c.field-meta.xml
<CustomField>
    <fullName>First_Yr_Complete_11_Coursework__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the student’s first year in eleventh grade</description>
    <label>First Yr Complete 11 Coursework</label>
    <type>Checkbox</type>
</CustomField>