force-app/main/default/objects/hed__Program_Enrollment__c/fields/First_Yr_Complete_HS_Coursework__c.field-meta.xml
<CustomField>
    <fullName>First_Yr_Complete_HS_Coursework__c</fullName>
    <description>Is this the student&apos;s first year in ninth grade</description>
    <label>First Yr Complete HS Coursework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>