force-app/main/default/objects/hed__Program_Enrollment__c/fields/FL_Personal_Learning_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>FL_Personal_Learning_Scholarship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the student received a Personal Learning Scholarship Account (excluding a McKay Scholarship)</description>
    <label>FL Personal Learning Scholarship</label>
    <type>Checkbox</type>
</CustomField>