force-app/main/default/objects/hed__Program_Enrollment__c/fields/FL_PLSA_Flag_Override__c.field-meta.xml
<CustomField>
    <fullName>FL_PLSA_Flag_Override__c</fullName>
    <description>Florida Personal Learning Scholarship Account Flag</description>
    <label>FL PLSA Flag Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Move to HE</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>