force-app/main/default/objects/hed__Program_Enrollment__c/fields/Formula_Count_of_Enrolled_Students__c.field-meta.xml
<CustomField>
    <fullName>Formula_Count_of_Enrolled_Students__c</fullName>
    <description>Formula Field is creating for the US # 335146, to Check the Total Count of Enrolled Students under a Caretaker whose Student Program Status is Complete.</description>
    <formula>IF(RecordType.Name = &apos;Caretaker&apos;,Total_Count_of_Enrolled_Students__c,Household_Program_Enrollment__r.Total_Count_of_Enrolled_Students__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Count of Enrolled Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>