force-app/main/default/objects/hed__Program_Enrollment__c/fields/Foster_Child__c.field-meta.xml
<CustomField>
    <fullName>Foster_Child__c</fullName>
    <description>Foster Child</description>
    <label>Foster Child</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Foster Child</fullName>
            </value>
            <value>
                <fullName>Potential Foster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>