force-app/main/default/objects/hed__Program_Enrollment__c/fields/Foster_Child_Notes__c.field-meta.xml
<CustomField>
    <fullName>Foster_Child_Notes__c</fullName>
    <description>Foster Child Notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Foster Child Notes</label>
    <type>TextArea</type>
</CustomField>