force-app/main/default/objects/hed__Program_Enrollment__c/fields/Foster_Flag__c.field-meta.xml
<CustomField>
    <fullName>Foster_Flag__c</fullName>
    <label>Foster Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>