force-app/main/default/objects/hed__Program_Enrollment__c/fields/Fulltime_or_Partime__c.field-meta.xml
<CustomField>
    <fullName>Fulltime_or_Partime__c</fullName>
    <description>Is this student Full Time or Part Time</description>
    <label>Fulltime or Partime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time Student</fullName>
            </value>
            <value>
                <fullName>Part-Time Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>