force-app/main/default/objects/hed__Program_Enrollment__c/fields/Gifted_Program_Request__c.field-meta.xml
<CustomField>
    <fullName>Gifted_Program_Request__c</fullName>
    <description>Indicate which Gifted and Talented programs you would like to request for your student with Connections Academy</description>
    <label>Gifted Program Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gifted and Talented Language Arts</fullName>
            </value>
            <value>
                <fullName>Gifted and Talented Math</fullName>
            </value>
            <value>
                <fullName>I am not requesting for my student to be considered for the Gifted and Talented program.</fullName>
            </value>
            <value>
                <fullName>Language Arts</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Accelerated Math</fullName>
            </value>
            <value>
                <fullName>Enriched Language Arts</fullName>
            </value>
            <value>
                <fullName>Enriched Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>