force-app/main/default/objects/hed__Program_Enrollment__c/fields/Grad_On_track__c.field-meta.xml
<CustomField>
    <fullName>Grad_On_track__c</fullName>
    <label>Grad On track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>