force-app/main/default/objects/hed__Program_Enrollment__c/fields/Grade_Level_Eligibility_Counter__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level_Eligibility_Counter__c</fullName>
    <description>Grade Level Eligibility Counter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grade Level Eligibility Counter</label>
    <type>TextArea</type>
</CustomField>