force-app/main/default/objects/hed__Program_Enrollment__c/fields/GradeLevelEligibility__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelEligibility__c</fullName>
    <label>Grade Level Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed to Enroll</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Need additional information</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>