force-app/main/default/objects/hed__Program_Enrollment__c/fields/GradeLevelReviewDescription__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelReviewDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grade Level Review Description</label>
    <type>TextArea</type>
</CustomField>