force-app/main/default/objects/hed__Program_Enrollment__c/fields/Grades_Home_Schooled__c.field-meta.xml
<CustomField>
    <fullName>Grades_Home_Schooled__c</fullName>
    <description>The grade(s) the student was homeschooled</description>
    <label>Grades Home Schooled</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Values to be added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>