force-app/main/default/objects/hed__Program_Enrollment__c/fields/Graduate_On_Track__c.field-meta.xml
<CustomField>
    <fullName>Graduate_On_Track__c</fullName>
    <label>Graduate On Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>