force-app/main/default/objects/hed__Program_Enrollment__c/fields/Has_Open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Open Opportunity</label>
    <type>Checkbox</type>
</CustomField>