force-app/main/default/objects/hed__Program_Enrollment__c/fields/HCA_District_Verif_Result__c.field-meta.xml
<CustomField>
    <fullName>HCA_District_Verif_Result__c</fullName>
    <description>District Verification Result</description>
    <label>HCA District Verif Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligible- District Participation</fullName>
            </value>
            <value>
                <fullName>Eligible- Homeschool/Private School</fullName>
            </value>
            <value>
                <fullName>Eligible- Out of District Transfer Approved</fullName>
            </value>
            <value>
                <fullName>Eligible- Summer Enrollment</fullName>
            </value>
            <value>
                <fullName>Eligible- Withdrawal Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>